Ultimate pagine web pubbliche

--- a/views/animationPage.ejs
+++ b/views/animationPage.ejs
@@ -7,8 +7,8 @@
 		
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/navbar.css" type="text/css">
-	<link rel="stylesheet" href="css/feature.css" type="text/css">
+	<link rel="stylesheet" href="/css/navbar.css" type="text/css">
+	<link rel="stylesheet" href="/css/feature.css" type="text/css">
 </head>
 <body>
 	<%- include("./include/navbar.ejs") %>
@@ -16,7 +16,7 @@
 	<div id="container" class="container h-auto pt-4 mt-4 bg-dark">
 		<div class="row pb-5">
 			<div class="col">
-				<img src="" alt="logo animazione" onerror="this.src='img/anim/noimage.png' ">
+				<img src="" alt="logo animazione" onerror="this.src='/img/anim/noimage.png' ">
 			</div>
 			<div class="col">
 				<p id="nome"><%= animation.titolo %></p>
