--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -11,20 +11,20 @@
 <body>
 	<%- include("./include/navbar.ejs") %>
 	<div id="container" class="container pt-4 mt-4 bg-dark">
-
+		<% for(bd of bds) { %>
 			<div class="row pb-5">
 				<img class="float-left" src="" alt="cofanetto" onerror="this.src='img/bd/noimage.png' ">
 
 				<div class="descrizione mr-4">
-					<p class="testo"><a class="link" href="">Name</a> <br/>
-					<span class="prezzo">Prezzo:</span>
+					<p class="testo"><a class="link" href=""><%= bd.animazione.titolo %></a> <br/>
+					<span class="prezzo">Prezzo:</span> <%= bd.prezzo %>
 					<span></span><br/>
 					<span class="contenuto">Descrizione:</span> <br/>
-					<span></span></p>
+					<span><%= bd.descrizione %></span></p>
 					
 					<% if(false) { //user%>
 					<form name="shopForm" action="" method="get" onsubmit="return checkForm(this)">
-						<input type="hidden" name="bd" value="<%= cofanetto.getCodice() %>">
+						<input type="hidden" name="bd" value="<%= bd._id %>">
 						<label>Quantità
 						<input type="number" name="quantity" min="1">
 						</label><br/>
@@ -38,7 +38,7 @@
 					<% } %>
 				</div>
 			</div>
-
+		<% } %>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
