--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,8 +24,8 @@
 	
 
 	<!--  form che serve solo per mantenere valori per lo script JS insertError() -->
-	<form><input type="hidden" id="errorType" name="errorType" value="">
-	<input type="hidden" id="error" name="error" value=""></form>
+	<form><input type="hidden" id="errorType" name="errorType" value="<%= errorType %>">
+	<input type="hidden" id="error" name="error" value="<%= errorString %>"></form>
 	
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
