--- a/views/include/navbar.ejs
+++ b/views/include/navbar.ejs
@@ -24,16 +24,16 @@
 	    </ul>
 	    
 	    <ul class="navbar-nav ml-auto text-center">	    
-	    <% if(true) {%>
+	    <% if(!locals.user) {%>
 	      	<li class="nav-item dropdown align-middle">
 		        <a class="nav-link dropdown-toggle" href="#" id="logDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 		          Accedi
 		        </a>
 		        <div class="dropdown-menu py-2 px-3 dropdown-menu-right" id="dropdownLog" aria-labelledby="logDropdown">
-		          	<form name="logForm" class="px-auto ml-auto text-center" action="<%= %>" method="post" onsubmit="return checkLogForm()">
+		          	<form name="logForm" class="px-auto ml-auto text-center" action="login" method="post" onsubmit="return checkLogForm()">
 		          		<div class="form-group">
 							<label for="userLog">Username</label>
-							<input type="text" id="userLog" name="user" placeholder="Username" required> <br/>
+							<input type="text" id="userLog" name="username" placeholder="Username" required> <br/>
 							<span class="error" id="errorLogUser"></span>
 						</div>
 						<div class="form-group">
@@ -55,26 +55,26 @@
 		          Sezione Utente
 		        </a>
 		        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-		          <a class="dropdown-item" href="<%= response.encodeURL("/MIRAI_ANIMATION/user/cartUser.jsp") %>">Carrello</a>
-		          <a class="dropdown-item" href="<%= response.encodeURL("/MIRAI_ANIMATION/OrderControl") %>">Ordini effettuati</a>
+		          <a class="dropdown-item" href="">Carrello</a>
+		          <a class="dropdown-item" href="">Ordini effettuati</a>
 		          <!--  <div class="dropdown-divider"></div>-->
-		          <a class="dropdown-item" href="<%= response.encodeURL("/MIRAI_ANIMATION/user/infoUser.jsp") %>">Account</a>
+		          <a class="dropdown-item" href="">Account</a>
 		          <div class="dropdown-divider"></div>
-		          <a class="dropdown-item" href="<%= response.encodeURL("/MIRAI_ANIMATION/LoutCheck") %>">Log out</a>
+		          <a class="dropdown-item" href="logout">Log out</a>
 		        </div>
 		      </li>
 		      
-		      <% if (user.getTipo().equals("admin")) { %>
+		      <% if (locals.user.tipo === "admin") { %>
 		      	<li class="nav-item dropdown">
 			        <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			          Sezione Admin
 			        </a>
 			        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="adminDropdown">
-			          <a class="dropdown-item" href="<%= response.encodeURL("/MIRAI_ANIMATION/AdminControl?action=animation") %>">Pannello Animazioni</a>
-			          <a class="dropdown-item" href="<%= response.encodeURL("/MIRAI_ANIMATION/AdminControl?action=staff") %>">Pannello Personale</a>
+			          <a class="dropdown-item" href="">Pannello Animazioni</a>
+			          <a class="dropdown-item" href="">Pannello Personale</a>
 			          <!--  <div class="dropdown-divider"></div>-->
-			          <a class="dropdown-item" href="<%= response.encodeURL("/MIRAI_ANIMATION/AdminControl?action=cofanetto") %>">Pannello Cofanetti</a>
-			          <a class="dropdown-item" href="<%= response.encodeURL("/MIRAI_ANIMATION/admin/userManager.jsp") %>">Pannello Utenti</a>
+			          <a class="dropdown-item" href="">Pannello Cofanetti</a>
+			          <a class="dropdown-item" href="">Pannello Utenti</a>
 			        </div>
 		      	</li>
 		      <% } %>
@@ -93,8 +93,13 @@
 	          <span aria-hidden="true">&times;</span>
 	        </button>
 	      </div>
-	      <form name="signForm" action="" method="post" onsubmit="return checkSignForm()">
+	      <form name="signForm" action="signup" method="post" onsubmit="return checkSignForm()">
 		      <div class="modal-body mt-3">
+				<div class="form-group">
+					<input type="text" id="email" name="email" required>
+					<label for="user">E-mail</label><br/>
+					<span class="error" id="errorSignEmail"></span>				
+				</div>
 		      	<div class="form-group">
 					<input type="text" id="user" name="user" required>
 					<label for="user">Username</label><br/>
@@ -106,23 +111,28 @@
 					<span class="error" id="errorSignPass"></span>
 				</div>
 	      		<div class="form-group">
-					<input type="text" id="name" name="name" required>
+					<input type="text" id="name" name="nome" required>
 					<label for="name">Nome</label><br/>
 					<span class="error" id="errorSignName"></span>
 				</div>
 				<div class="form-group">
-					<input type="text" id="surname" name="surname" required> 
+					<input type="text" id="surname" name="cognome" required> 
 					<label for="surname">Cognome</label><br/>
 					<span class="error" id="errorSignSurname"></span>
 				</div>
 		  		<div class="form-group">
-					<input type="text" id="birthDate" name="birthDate" required>
+					<input type="text" id="birthDate" name="dataNascita" required>
 					<label for="birthDate">Data di Nascita</label><br/>
 					<span class="error" id="errorSignBirth"></span>
 				</div>
 				<div class="form-group">
-					<input type="text" id="address" name="address" required>
-					<label for="address">Indirizzo</label><br/>
+					<h6 style="margin-bottom: 15px">Indirizzo</h6>
+					<input type="text" id="city" name="city" required>
+					<label for="city">Città</label><br/>
+					<input type="text" id="via" name="via" required>
+					<label for="via">Via</label><br/>
+					<input type="text" id="cap" name="cap" required>
+					<label for="cap">CAP</label><br/>
 					<span class="error" id="errorSignAddress"></span>
 				</div>
 				<span id="errorSign"></span><br/>
