Aggiunto reset password e processo di pagamento
Il processo di pagamento implementato tramite stripe

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -40,6 +40,10 @@ div#signUpModal{
 	color: black !important;
 }
 
+div#resetModal{
+	color: black;
+}
+
 div#signUpModal label{
 	color: black;
   	position: relative;
