--- a/views/include/navbar.ejs
+++ b/views/include/navbar.ejs
@@ -31,6 +31,7 @@
 		        </a>
 		        <div class="dropdown-menu py-2 px-3 dropdown-menu-right" id="dropdownLog" aria-labelledby="logDropdown">
 		          	<form name="logForm" class="px-auto ml-auto text-center" action="login" method="post" onsubmit="return checkLogForm()">
+						<input type="hidden" name="_csrf" value="<%= locals.csrf %>">
 		          		<div class="form-group">
 							<label for="userLog">Username</label>
 							<input type="text" id="userLog" name="username" placeholder="Username" required> <br/>
@@ -55,10 +56,11 @@
 		          Sezione Utente
 		        </a>
 		        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-		          <a class="dropdown-item" href="">Carrello</a>
+		          <a class="dropdown-item" href="/carrello">Carrello</a>
 		          <a class="dropdown-item" href="">Ordini effettuati</a>
 		          <!--  <div class="dropdown-divider"></div>-->
-		          <a class="dropdown-item" href="">Account</a>
+		          <a class="dropdown-item" href="/account">Account</a>
+				  <a class="dropdown-item" data-toggle="modal" data-target="#resetModal">Reimposta password</a>
 		          <div class="dropdown-divider"></div>
 		          <a class="dropdown-item" href="logout">Log out</a>
 		        </div>
@@ -85,66 +87,93 @@
 	</nav>
 	
 	<div class="modal fade" id="signUpModal" tabindex="-1" role="dialog" aria-labelledby="signUpLabel" aria-hidden="true">
-	  <div class="modal-dialog modal-dialog-centered" role="document">
-	    <div class="modal-content bg-opacity color">
-	      <div class="modal-header">
-	        <h5 class="modal-title" id="signUpLabel">Registrati</h5>
-	        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-	          <span aria-hidden="true">&times;</span>
-	        </button>
-	      </div>
-	      <form name="signForm" action="signup" method="post" onsubmit="return checkSignForm()">
-		      <div class="modal-body mt-3">
-				<div class="form-group">
-					<input type="text" id="email" name="email" required>
-					<label for="user">E-mail</label><br/>
-					<span class="error" id="errorSignEmail"></span>				
-				</div>
-		      	<div class="form-group">
-					<input type="text" id="user" name="user" required>
-					<label for="user">Username</label><br/>
-					<span class="error" id="errorSignUser"></span>				
-				</div>
-				<div class="form-group">
-					<input type="password" id="password" name="password" required>
-					<label for="password">Password</label><br/>
-					<span class="error" id="errorSignPass"></span>
-				</div>
-	      		<div class="form-group">
-					<input type="text" id="name" name="nome" required>
-					<label for="name">Nome</label><br/>
-					<span class="error" id="errorSignName"></span>
-				</div>
-				<div class="form-group">
-					<input type="text" id="surname" name="cognome" required> 
-					<label for="surname">Cognome</label><br/>
-					<span class="error" id="errorSignSurname"></span>
-				</div>
-		  		<div class="form-group">
-					<input type="text" id="birthDate" name="dataNascita" required>
-					<label for="birthDate">Data di Nascita</label><br/>
-					<span class="error" id="errorSignBirth"></span>
-				</div>
-				<div class="form-group">
-					<h6 style="margin-bottom: 15px">Indirizzo</h6>
-					<input type="text" id="city" name="city" required>
-					<label for="city">Città</label><br/>
-					<input type="text" id="via" name="via" required>
-					<label for="via">Via</label><br/>
-					<input type="text" id="cap" name="cap" required>
-					<label for="cap">CAP</label><br/>
-					<span class="error" id="errorSignAddress"></span>
-				</div>
-				<span id="errorSign"></span><br/>
-			  </div>
-		      <div class="modal-footer">
-		        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-		        <input type="submit" value="Registrati" class="btn btn-secondary">
-		      </div>
-	      </form>
-	    </div>
-	  </div>
+	  	<div class="modal-dialog modal-dialog-centered" role="document">
+	    	<div class="modal-content bg-opacity color">
+	      		<div class="modal-header">
+					<h5 class="modal-title" id="signUpLabel">Registrati</h5>
+					<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+					</button>
+	      		</div>
+	      		<form name="signForm" action="signup" method="post" onsubmit="return checkSignForm()">
+					<input type="hidden" name="_csrf" value="<%= locals.csrf %>">
+					<div class="modal-body mt-3">
+						<div class="form-group">
+							<input type="text" id="email" name="email" required>
+							<label for="user">E-mail</label><br/>
+							<span class="error" id="errorSignEmail"></span>				
+						</div>
+						<div class="form-group">
+							<input type="text" id="user" name="user" required>
+							<label for="user">Username</label><br/>
+							<span class="error" id="errorSignUser"></span>				
+						</div>
+						<div class="form-group">
+							<input type="password" id="password" name="password" required>
+							<label for="password">Password</label><br/>
+							<span class="error" id="errorSignPass"></span>
+						</div>
+						<div class="form-group">
+							<input type="text" id="name" name="nome" required>
+							<label for="name">Nome</label><br/>
+							<span class="error" id="errorSignName"></span>
+						</div>
+						<div class="form-group">
+							<input type="text" id="surname" name="cognome" required> 
+							<label for="surname">Cognome</label><br/>
+							<span class="error" id="errorSignSurname"></span>
+						</div>
+						<div class="form-group">
+							<input type="text" id="birthDate" name="dataNascita" required>
+							<label for="birthDate">Data di Nascita</label><br/>
+							<span class="error" id="errorSignBirth"></span>
+						</div>
+						<div class="form-group">
+							<h6 style="margin-bottom: 15px">Indirizzo</h6>
+							<input type="text" id="city" name="city" required>
+							<label for="city">Città</label><br/>
+							<input type="text" id="via" name="via" required>
+							<label for="via">Via</label><br/>
+							<input type="text" id="cap" name="cap" required>
+							<label for="cap">CAP</label><br/>
+							<span class="error" id="errorSignAddress"></span>
+						</div>
+						<span id="errorSign"></span><br/>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+						<input type="submit" value="Registrati" class="btn btn-secondary">
+					</div>
+	      		</form>
+	    	</div>
+	  	</div>
 	</div>
 	
+	<% if(locals.user && !locals.user.verificato){ %>
+		<div>
+			<span>Account non verificato. Visiona la tua casella mail</span>
+		</div>
+	<% } %>
+
+	<!-- modal reset password-->
+	<div class="modal fade" id="resetModal" tabindex="-1" role="dialog" aria-labelledby="resetModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-sm" role="document">
+		  <div class="modal-content">
+			<div class="modal-header">
+			  <h5 class="modal-title" id="resetModalLabel">Reimposta password</h5>
+			  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+				<span aria-hidden="true">&times;</span>
+			  </button>
+			</div>
+			<div class="modal-body">
+			  Sicuro di voler reimpostare la password?
+			</div>
+			<div class="modal-footer">
+			  <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+			  <a href="/reset" class="btn btn-primary">Si</a>
+			</div>
+		  </div>
+		</div>
+	  </div>
 	<script src="js/navbar.js"></script>
 	
