--- a/views/user/orders.ejs
+++ b/views/user/orders.ejs
@@ -9,21 +9,39 @@
 	<link rel="stylesheet" href="css/order.css" type="text/css">
 </head>
 <body>
-	<%@ include file="../navbar.jsp" %>
+	<%- include("../include/navbar.ejs") %>
 	
 	<div id="container" class="container pt-4 mt-4 bg-dark h-100">
 		<span id="titolo">Ordini effettuati</span>
-			<div class="row pb-5">
-				<div class="col-3 float-left">
-					<img src="" alt="cofanetto" onerror="this.src='img/bd/noimage.png'">
+		<div id="accordion">
+			<% for(order of ordini) { %> 
+				<div class="card">
+					<div class="card-header" id="heading<%= order.numeroOrdine %>">
+						<h5 class="mb-0">
+							<button class="btn btn-link" data-toggle="collapse" data-target="#<%= order.numeroOrdine %>" aria-expanded="true" aria-controls="collapseOne">
+								Ordine numero <%= order.numeroOrdine %> 
+							</button>
+							<span class="float-right">Effettuato in data <%= order.dataOrdine.getDate() + "/" +  (order.dataOrdine.getMonth() + 1) + "/" + order.dataOrdine.getFullYear() %></span>
+						</h5>
+					</div>
+			
+					<div id="<%= order.numeroOrdine %>" class="collapse" aria-labelledby="heading<%= order.numeroOrdine %>" data-parent="#accordion">
+						<div class="card-body">
+							<div class="row">
+								<% for(el of order.prodotti) { %> 
+									<div class="col">
+										<span>Nome:</span> <%= el.prodotto.animazione.titolo %>  <br/>
+										<span>Quantità:</span> <%= el.quantity %><br/>
+										<span>Prezzo:</span> <%= el.prezzo %><br/>
+									</div>
+								<% } %>
+							</div>
+							<a href="fattura/<%= encodeURIComponent(order.numeroOrdine) %>">Fattura</a>
+						</div>
+					</div>
 				</div>
-				<div>
-					<span>Nome:</span> <br/>
-					<span>Quantità:</span> <br/>
-					<span>Totale:</span> <br/><br/><br/>
-				</div>
-			</div>
-	
+			<% } %>
+		</div>
 	</div>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
