--- a/views/include/navbar.ejs
+++ b/views/include/navbar.ejs
@@ -57,7 +57,7 @@
 		        </a>
 		        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
 		          <a class="dropdown-item" href="/carrello">Carrello</a>
-		          <a class="dropdown-item" href="">Ordini effettuati</a>
+		          <a class="dropdown-item" href="/ordini">Ordini effettuati</a>
 		          <!--  <div class="dropdown-divider"></div>-->
 		          <a class="dropdown-item" href="/account">Account</a>
 				  <a class="dropdown-item" data-toggle="modal" data-target="#resetModal">Reimposta password</a>
