--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -32,6 +32,11 @@
 							Quantità: <%= el.quantity %> <br/>
 						</p>
 					</div>
+					<form method="post" action="deleteCart">
+						<input type="hidden" name="_csrf" value="<%= locals.csrf %>">
+						<input type="hidden" name="_id" value="<%= el._id %>">
+						<input type="submit" value="Elimina">
+					</form>
 				</div>
 			<%}%>
 		<%}%>
